--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "bootstrap": "^5.2.3",
+    "axios": "^1.3.4",
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
+    "react-table": "^7.8.0",
     "rsuite-table": "^5.9.0"
   },
   "devDependencies": {
