--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
+    "js-cookie": "^3.0.1",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.8.1",
     "react-table": "^7.8.0",
     "rsuite-table": "^5.9.0"
