--- a/client/package.json
+++ b/client/package.json
@@ -9,16 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
+    "immer": "^9.0.21",
     "js-cookie": "^3.0.1",
     "papaparse": "^5.4.1",
-    "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
-    "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-table": "^7.8.0",
+    "react-timekeeper": "^2.2.1",
     "rsuite-table": "^5.9.0"
   },
   "devDependencies": {
@@ -26,7 +28,11 @@
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.13",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "postcss": "^8.4.21",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "^3.2.7",
     "vite": "^4.1.0"
   }
